# contact-app

./: .gitignore  Cargo.toml  README  config.toml  contacts.json  package.json  pnpm-lock.yaml  tailwind.config.js
database/: db.sql
migrations/: 20240117165325_contacts.sql
src/: contacts.rs  lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
src/api/: contact.rs
src/model/: contact.rs
src/repository/: db.rs
src/routes/: contacts.rs  mod.rs
templates/: contacts.html  index.html  layout.html
