[package]
name = "contact-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
minijinja = { version = "1.0.7", features = ["builtins", "loader"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlite = "0.31.1"
tokio = { version = "1.32.0", features = ["full"] }
