[package]
name = "contact-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
actix-files="0.6"
askama = "0.12"
askama_actix="0.14"
config = "0.13"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
uuid = { version = "1.6", features = ["v4"] }
